--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.2",
     "connect-multiparty": "^2.1.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "jwt-simple": "^0.5.1",
     "moment": "^2.19.1",
